[package]
name = "pause_console"
version = "0.2.0"
authors = ["Andrii Semenystyi <meowningmaster@gmail.com>"]
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Pauses the console"
repository = "https://github.com/MeowningMaster/pause_console"
keywords = ["console"]
categories = ["command-line-utilities"]
readme = "Readme.md"

[dependencies]
